<resources>
    <string name="app_name">Calculator</string>
    <string name="error">error</string>
    <string name="dvidy_by_0">cannot divide by 0</string>
    <string name="max_len">Maximum number of digit</string>
    <string name="share_app">share app</string>
    <string name="share_result">share result</string>
    <string name="weekend">weekend</string>
    <string name="chik_out">CHICK OUT!!</string>
    <string name="massage">Happy weekend and have a nice day my friend</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="fife">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>


</resources>